Fix social sharing image for WhatsApp and Slack
- Add og:image:secure_url for better platform compatibility
- Add og:image:type to specify JPEG format
- Ensure absolute URLs for all Open Graph images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta property="og:title" content="Hampshire Roof Care | Expert Roofing Services in Hampshire" />
     <meta property="og:description" content="Professional roof repairs, replacements, and maintenance across Hampshire. Free site surveys, honest advice, and quality workmanship." />
     <meta property="og:image" content="https://hampshireroofcare.co.uk/og-image.jpg" />
+    <meta property="og:image:secure_url" content="https://hampshireroofcare.co.uk/og-image.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Hampshire Roof Care" />
